--- a/HelloSeoul/src/main/webapp/resources/ticketMain2/New/Css/reset.css
+++ b/HelloSeoul/src/main/webapp/resources/ticketMain2/New/Css/reset.css
@@ -22,21 +22,21 @@
   font-style: normal;
   font-weight: 300;
   src: url("../../entimg/font/notoN/NotoSansKR-DemiLight-Hestia.eot");
-  src: local(ï¿½ï¿½), url("../../entimg/font/notoN/NotoSansKR-DemiLight-Hestia.woff") format("woff"), url("../../entimg/font/notoN/NotoSansKR-DemiLight-Hestia.otf") format("opentype");
+  src: local(¡Ø), url("../../entimg/font/notoN/NotoSansKR-DemiLight-Hestia.woff") format("woff"), url("../../entimg/font/notoN/NotoSansKR-DemiLight-Hestia.otf") format("opentype");
 }
 @font-face {
   font-family:"Noto Sans KR";
   font-style: normal;
   font-weight: 500;
   src: url("../../entimg/font/notoN/NotoSansKR-Medium-Hestia.eot");
-  src: local(ï¿½ï¿½), url("../../entimg/font/notoN/NotoSansKR-Medium-Hestia.woff") format("woff"), url("../../entimg/font/notoN/NotoSansKR-Medium-Hestia.otf") format("opentype");
+  src: local(¡Ø), url("../../entimg/font/notoN/NotoSansKR-Medium-Hestia.woff") format("woff"), url("../../entimg/font/notoN/NotoSansKR-Medium-Hestia.otf") format("opentype");
 }
 @font-face {
   font-family:"Noto Sans KR";
   font-style: normal;
   font-weight: 700;
   src: url("../../entimg/font/notoN/NotoSansKR-Bold-Hestia.eot");
-  src: local(ï¿½ï¿½), url("../../entimg/font/notoN/NotoSansKR-Bold-Hestia.woff") format("woff"), url("../../entimg/font/notoN/NotoSansKR-Bold-Hestia.otf") format("opentype");
+  src: local(¡Ø), url("../../entimg/font/notoN/NotoSansKR-Bold-Hestia.woff") format("woff"), url("../../entimg/font/notoN/NotoSansKR-Bold-Hestia.otf") format("opentype");
 }
 
 html, body, div, span, applet, object, iframe,
@@ -59,7 +59,7 @@ time, mark, audio, video {
 	/*font:inherit;*/
 	font-style: normal;
 	vertical-align: baseline;
-	font-family:'NanumBarunGothic', 'ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½', 'Malgun Gothic', sans-serif;
+	font-family:'NanumBarunGothic', '¸¼Àº °íµñ', 'Malgun Gothic', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
