--- a/HelloSeoul/src/main/webapp/resources/final_style/css/flatly_bootstrap.css
+++ b/HelloSeoul/src/main/webapp/resources/final_style/css/flatly_bootstrap.css
@@ -94,8 +94,13 @@
   }
 }
 
-.section{
-	height: 3000px;
+/* customline */
+.headerline{
+	padding-bottom: 20px;
+	
+}
+.footerline{
+	padding-top: 20px;	
 }
 
 body {
